# SPDX-License-Identifier: Apache-2.0

project('phosphor-debug-collector-test',
        'cpp',
        meson_version: '>= 0.57.0',
        default_options: [
                          'cpp_std=c++20',
                          'warning_level=3',
                          'werror=true',
                          'buildtype=debugoptimized'
                         ],
        version: '1.0',
        license: 'Apache-2.0'
       )

cpp = meson.get_compiler('cpp')
subdir('pdbgc')